tests/ui/double_yield.stderr
error[E0499]: cannot borrow `yielder` as mutable more than once at a time
 --> tests/ui/double_yield.rs:4:23
  |
3 |         let _first = yielder.yield_item(1312);
  |                      ------- first mutable borrow occurs here
4 |         let _second = yielder.yield_item(141);
  |                       ^^^^^^^ second mutable borrow occurs here
5 |     });
  |     - first borrow might be used here, when `_first` is dropped and runs the destructor for type `impl Future<Output = ()> + '_`
